--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,146 +1,191 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 30px 10%;
-  background-color: #1d4a63;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px 10%;
+    background-color: #ffffff;
 }
 
 .logo {
-  margin-right: auto;
+    margin-right: auto;
+}
+
+.uplogo {
+    position: relative;
+    max-width: 20%;
 }
 
 .nav__links {
-  list-style: none;
-  display: flex;
+    list-style: none;
+    display: flex;
+    margin-top: 20px;
 }
 
 .nav__links a,
 .cta,
 .overlay__content a {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
-  color: #edf0f1;
-  text-decoration: none;
-  text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .nav__links li {
-  padding: 0px 20px;
+    padding: 0px 20px;
 }
 
 .nav__links li a {
-  transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
 }
 
 .nav__links li a:hover {
-  color: #0088a9;
+    color: #0088a9;
 }
 
 .cta {
-  margin-left: 20px;
-  padding: 9px 25px;
-  background-color: #126E82;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
+    margin-left: 20px;
+    padding: 9px 25px;
+    background-color: #126E82;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
 }
 
 .cta:hover {
-  background-color: #51C4D3;
+    background-color: #51C4D3;
 }
+
 
 /* Mobile Nav */
 
 .menu {
-  display: none;
+    display: none;
 }
 
 .overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  background-color: #24252a;
-  overflow-x: hidden;
-  transition: all 0.5s ease 0s;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: #24252a;
+    overflow-x: hidden;
+    transition: all 0.5s ease 0s;
 }
 
 .overlay--active {
-  width: 100%;
+    width: 100%;
 }
 
 .overlay__content {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .overlay a {
-  padding: 15px;
-  font-size: 36px;
-  display: block;
-  transition: all 0.3s ease 0s;
+    padding: 15px;
+    font-size: 36px;
+    display: block;
+    transition: all 0.3s ease 0s;
 }
 
 .overlay a:hover,
 .overlay a:focus {
-  color: #0088a9;
+    color: #0088a9;
 }
+
 .overlay .close {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-  color: #edf0f1;
-  cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    color: #edf0f1;
+    cursor: pointer;
 }
 
 @media screen and (max-height: 450px) {
-  .overlay a {
-    font-size: 20px;
-  }
-  .overlay .close {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
+    .overlay a {
+        font-size: 20px;
+    }
+    .overlay .close {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
 }
 
 @media only screen and (max-width: 800px) {
-  .nav__links,
-  .cta {
-    display: none;
-  }
-  .menu {
-    display: initial;
-  }
+    .nav__links,
+    .cta {
+        display: none;
+    }
+    .menu {
+        display: initial;
+    }
 }
 
 @media only screen and (max-width: 800px) {
     .noprev {
-      display: none;
+        display: none;
     }
-  }
+}
 
-.anislogo {
-  text-decoration: none;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 700;
-  font-size: 30px;
-  letter-spacing: 2px;
+
+.textwhite {
+    color: white;
+    text-transform: uppercase;
+    font-style: italic;
+    font-size: 3vw;
+}
+
+@media only screen and (max-width: 800px) {
+    .textwhite {
+        font-size: 5vw;
+    }
+}
+
+.bg {
+    height: 400px;
+}
+
+@media only screen and (max-width: 800px) {
+    .bg {
+        height: 340px;
+    }
+}
+
+.section-bg {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.section-bg:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(35, 45, 57, 0.8);
+}
+
+.section-bg>form,
+.section-bg .container {
+    position: relative;
+    z-index: 2
 }
